Added a graph for MAUs

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -45,6 +45,7 @@ body {
     stroke: #fff;
 }
 
-.axis text {
+.axis text, .label {
+    font-family: 'Nunito', Helvetica, Arial, sans-serif;
     fill: #fff;
 }
