Generate csv data for the session duration graph

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -51,17 +51,17 @@ body {
 }
 
 .area.outer {
-    stroke: #3e43c1;
-    fill: #6b6ecf;
+    stroke: #1c244a;
+    fill: #232d5c;
 }
 
 .area.inner {
-    stroke: #444588;
-    fill: #5254a3;
+    stroke: #232d5c;
+    fill: #2a366f;
 }
 
 .median-line {
     fill: none;
-    stroke: #393b79;
+    stroke: #384794;
     stroke-width: 2;
 }
